[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/views/editor/components/viewport/gizmos/material_red.tres" type="Material" id=1]
[ext_resource path="res://ui/views/editor/components/viewport/gizmos/material_blue.tres" type="Material" id=2]
[ext_resource path="res://ui/views/editor/components/viewport/gizmos/material_green.tres" type="Material" id=3]
[ext_resource path="res://ui/views/editor/components/viewport/gizmos/move_gizmo.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 0.02, 0.02 )

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.001
bottom_radius = 0.1
height = 0.2
radial_segments = 14
rings = 2

[sub_resource type="SphereShape" id=3]
radius = 0.2

[sub_resource type="QuadMesh" id=4]
size = Vector2( 0.4, 0.4 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.2, 0.2, 0.01 )

[node name="MoveGizmo" type="Spatial"]
script = ExtResource( 4 )

[node name="Lines" type="Spatial" parent="."]

[node name="LineX" type="MeshInstance" parent="Lines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="LineY" type="MeshInstance" parent="Lines"]
transform = Transform( -4.37114e-08, 0, -1, 1, -4.37114e-08, -4.37114e-08, -4.37114e-08, -1, 1.91069e-15, 0, 0.5, -2.98023e-08 )
mesh = SubResource( 1 )
material/0 = ExtResource( 3 )

[node name="LineZ" type="MeshInstance" parent="Lines"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0.5 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="Arrows" type="Spatial" parent="."]

[node name="ArrowX" type="Area" parent="Arrows"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1, 0, 0 )

[node name="Mesh" type="MeshInstance" parent="Arrows/ArrowX"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Arrows/ArrowX"]
shape = SubResource( 3 )

[node name="ArrowY" type="Area" parent="Arrows"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )
monitoring = false
monitorable = false

[node name="Mesh" type="MeshInstance" parent="Arrows/ArrowY"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Arrows/ArrowY"]
shape = SubResource( 3 )

[node name="ArrowZ" type="Area" parent="Arrows"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.1 )
monitoring = false
monitorable = false

[node name="Mesh" type="MeshInstance" parent="Arrows/ArrowZ"]
transform = Transform( 1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Arrows/ArrowZ"]
shape = SubResource( 3 )

[node name="Quads" type="Spatial" parent="."]

[node name="X" type="Area" parent="Quads"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.18557e-08, 0.5, 0.5 )

[node name="Mesh" type="MeshInstance" parent="Quads/X"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.1658e-08 )
mesh = SubResource( 4 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Quads/X"]
shape = SubResource( 5 )

[node name="Y" type="Area" parent="Quads"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.5, 0, 0.5 )

[node name="Mesh" type="MeshInstance" parent="Quads/Y"]
transform = Transform( 1.91069e-15, 1, 4.37114e-08, -1, 1.91069e-15, 0, 0, -4.37114e-08, 1, -2.98023e-08, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Quads/Y"]
shape = SubResource( 5 )

[node name="Z" type="Area" parent="Quads"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0 )

[node name="Mesh" type="MeshInstance" parent="Quads/Z"]
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Quads/Z"]
shape = SubResource( 5 )
